--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,41 @@
 body {
     margin: 0;
     padding: 0;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #111;
     font-family: sans-serif;
+    background-color: #111;
+    color: white;
 }
-
-.cuadro-animado {
+body::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    
+    background-image: url('Rallyfnd2.jpg');
+    background-size: cover; 
+    background-position: center;
+    background-repeat: no-repeat; 
+    opacity: 0.2;
+    z-index: -2; 
+}
+.menu-navegacion {
+    display: flex; 
+    justify-content: center;
+    gap: 20px;
+    padding: 30px; 
+    background-color: #181818;
+}
+.opcion-neon {
     position: relative;
-    width: 300px;
-    background-color: transparent;
     border-radius: 80px;
-    padding: 4px; 
+    padding: 3px; 
     overflow: hidden;
     z-index: 1;
 }
 
-.cuadro-animado::before {
+.opcion-neon::before {
     content: '';
     position: absolute;
     top: -50%;
@@ -30,20 +46,28 @@ body {
     
     background: conic-gradient(
         transparent,
-        transparent,
-        #00ccff,
-        #d400d4
+        rgba(0, 17, 255, 0.7),
+        rgba(212, 0, 212, 0.7), 
+        transparent
     );
-    
     animation: rotar 4s linear infinite;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
 }
-
-.contenido {
-    background-color: #1c1c1c; 
-    padding: 40px; 
-    border-radius: 80px; 
+.opcion-neon a {
+    display: block;
+    background-color: #2c2c2c;
     color: white;
-    text-align: center;
+    text-decoration: none;
+    padding: 15px 30px;
+    border-radius: 80px; 
+    transition: color 0.3s ease;
+}
+.opcion-neon:hover::before {
+    opacity: 1; 
+}
+.opcion-neon:hover a {
+    color: #0059ff; 
 }
 
 @keyframes rotar {
@@ -53,4 +77,63 @@ body {
     to {
         transform: rotate(360deg);
     }
+}
+.Contenido1{
+    text-align: center;
+}
+.Contenido2{
+    display: flex;
+    align-items: center;
+    gap: 25px;
+    max-width: 1000px; 
+    padding: 20px;
+    justify-items: center;
+    margin: 0 auto;
+}
+.Imagenruta {
+   position: relative; 
+    padding: 3px;
+    border-radius: 12px; 
+    overflow: hidden;
+    flex-shrink: 0;
+}
+.textoR{
+    color: white;
+    align-items: center;
+}
+.Imagenruta::before {
+    content: '';
+    position: absolute;
+    top: -50%;
+    left: -50%;
+    width: 200%;
+    height: 200%;
+    z-index: -1; /* Lo pone detrás de la imagen */
+    
+    background: conic-gradient(
+        transparent,
+        blue,
+        #d400d4,
+        transparent 30%
+    );
+    
+    animation: rotar 4s linear infinite;
+}
+@keyframes rotar {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+.Imagenruta img {
+    display: block; 
+    width: 600px;
+    height: 600px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+.textoR h1 {
+    margin-top: 0; 
 }
