--- a/styles4.css
+++ b/styles4.css
@@ -4,6 +4,10 @@ body {
     font-family: sans-serif;
     background-color: #111;
     color: white;
+    background-image: url('Rallyfnd7.jpg');
+    background-size: cover;   
+    background-position: center;  
+    background-attachment: fixed;  
 }
 .menu-navegacion {
     display: flex; 
@@ -31,8 +35,8 @@ body {
     
     background: conic-gradient(
         transparent,
-        rgba(0, 17, 255, 0.7),
-        rgba(212, 0, 212, 0.7), 
+         rgba(217, 186, 6, 0.7),
+        rgba(237, 237, 237, 0.7), 
         transparent
     );
     animation: rotar 4s linear infinite;
@@ -52,7 +56,7 @@ body {
     opacity: 1; 
 }
 .opcion-neon:hover a {
-    color: #00e1ff;  
+    color: rgb(180, 154, 8);   
 }
 
 @keyframes rotar {
@@ -61,5 +65,93 @@ body {
     }
     to {
         transform: rotate(360deg);
+    }
+}
+.site-footer {
+    background-color: rgba(0, 0, 0, 0.9);
+    color: #f4f4f4;       
+    padding: 25px 20px;
+    text-align: center;
+    font-size: 0.9rem;
+    line-height: 1.6;
+}
+.footer-content {
+    max-width: 800px;
+    margin: 0 auto; 
+}
+.site-footer p {
+    margin: 8px 0; 
+}
+.site-footer a {
+    color: #50aeff;         
+    text-decoration: none; 
+    font-weight: bold;
+    font-size: 1rem;
+}
+.site-footer a:hover {
+    text-decoration: underline; 
+}
+.ContenidoVideos {
+    max-width: 1000px; 
+    margin: 20px auto;
+    padding: 20px;
+    background-color: rgba(20, 20, 20, 0.6);
+    border-radius: 8px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+}
+.Contenido1{
+    text-align: center;
+    color: #000;
+}
+.ContenidoVideos h3 {
+    font-size: 1.8rem;
+    color: #e5c100; 
+    text-align: center;
+    margin: 20px 0;
+    border-bottom: 2px solid rgba(217, 186, 6, 0.3);
+    padding-bottom: 10px;
+}
+
+.video-responsive-wrapper {
+    position: relative;
+    padding-bottom: 56.25%; 
+    height: 0;
+    overflow: hidden;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+    background-color: #000; 
+}
+
+
+.video-responsive-wrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0; 
+}
+
+.video-separator {
+    border: none;
+    height: 1px;
+    background-color: #444;
+    margin: 40px 0;
+}
+
+.video-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr; 
+    gap: 20px; 
+}
+
+
+@media (max-width: 768px) {
+    .video-grid {
+        grid-template-columns: 1fr;
+    }
+
+    .ContenidoVideos h3 {
+        font-size: 1.4rem;
     }
 }
